--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -127,6 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LV2\다음 큰 숫자\Source.cpp" />
+    <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
+    <ClCompile Include="LV2\올바른 괄호\Source.cpp" />
+    <ClCompile Include="LV2\이진 변환 반복하기\Source.cpp" />
+    <ClCompile Include="LV2\짝지어 제거하기\Source.cpp" />
+    <ClCompile Include="LV2\최대값과 최솟값\Source.cpp" />
+    <ClCompile Include="LV2\최솟값 만들기\Source.cpp" />
+    <ClCompile Include="LV2\카펫\Source.cpp" />
+    <ClCompile Include="LV2\피보나치 수열\Source.cpp" />
     <ClCompile Include="Programmers.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
