--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -45,5 +45,11 @@
     <ClCompile Include="LV2\카펫\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\영어 끝말잇기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\구명보트\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
