--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -135,15 +135,19 @@
     <ClCompile Include="LV2\다음 큰 숫자\Source.cpp" />
     <ClCompile Include="LV2\멀리 뛰기\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
+    <ClCompile Include="LV2\압축\Source.cpp" />
     <ClCompile Include="LV2\영어 끝말잇기\Source.cpp" />
+    <ClCompile Include="LV2\오픈채팅방\Source.cpp" />
     <ClCompile Include="LV2\올바른 괄호\Source.cpp" />
     <ClCompile Include="LV2\이진 변환 반복하기\Source.cpp" />
+    <ClCompile Include="LV2\주차 요금 계산\Source.cpp" />
     <ClCompile Include="LV2\짝지어 제거하기\Source.cpp" />
     <ClCompile Include="LV2\최대값과 최솟값\Source.cpp" />
     <ClCompile Include="LV2\최솟값 만들기\Source.cpp" />
     <ClCompile Include="LV2\카펫\Source.cpp" />
     <ClCompile Include="LV2\타겟 넘버\Source.cpp" />
     <ClCompile Include="LV2\프린터\Source.cpp" />
+    <ClCompile Include="LV2\피로도\Source.cpp" />
     <ClCompile Include="LV2\피보나치 수열\Source.cpp" />
     <ClCompile Include="LV2\행렬의 곱셈\Source.cpp" />
     <ClCompile Include="Programmers.cpp" />
