--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -133,13 +133,16 @@
     <ClCompile Include="LV2\귤 고르기\Source.cpp" />
     <ClCompile Include="LV2\기능개발\Source.cpp" />
     <ClCompile Include="LV2\다음 큰 숫자\Source.cpp" />
+    <ClCompile Include="LV2\땅따먹기\Source.cpp" />
     <ClCompile Include="LV2\멀리 뛰기\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
+    <ClCompile Include="LV2\스킬트리\Source.cpp" />
     <ClCompile Include="LV2\압축\Source.cpp" />
     <ClCompile Include="LV2\영어 끝말잇기\Source.cpp" />
     <ClCompile Include="LV2\오픈채팅방\Source.cpp" />
     <ClCompile Include="LV2\올바른 괄호\Source.cpp" />
     <ClCompile Include="LV2\이진 변환 반복하기\Source.cpp" />
+    <ClCompile Include="LV2\주식가격\Source.cpp" />
     <ClCompile Include="LV2\주차 요금 계산\Source.cpp" />
     <ClCompile Include="LV2\짝지어 제거하기\Source.cpp" />
     <ClCompile Include="LV2\최대값과 최솟값\Source.cpp" />
