--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -127,14 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LV2\2 X n 타일링\Source.cpp" />
     <ClCompile Include="LV2\H-Index\Source.cpp" />
     <ClCompile Include="LV2\N개의 최소공배수\Source.cpp" />
+    <ClCompile Include="LV2\가장 큰 수\Source.cpp" />
     <ClCompile Include="LV2\구명보트\Source.cpp" />
     <ClCompile Include="LV2\귤 고르기\Source.cpp" />
     <ClCompile Include="LV2\기능개발\Source.cpp" />
+    <ClCompile Include="LV2\다리를 지나는 트럭\Source.cpp" />
     <ClCompile Include="LV2\다음 큰 숫자\Source.cpp" />
     <ClCompile Include="LV2\땅따먹기\Source.cpp" />
     <ClCompile Include="LV2\멀리 뛰기\Source.cpp" />
+    <ClCompile Include="LV2\삼각 달팽이\Source.cpp" />
+    <ClCompile Include="LV2\소수 찾기\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
     <ClCompile Include="LV2\스킬트리\Source.cpp" />
     <ClCompile Include="LV2\압축\Source.cpp" />
@@ -148,6 +153,7 @@
     <ClCompile Include="LV2\최대값과 최솟값\Source.cpp" />
     <ClCompile Include="LV2\최솟값 만들기\Source.cpp" />
     <ClCompile Include="LV2\카펫\Source.cpp" />
+    <ClCompile Include="LV2\큰 수 만들기\Source.cpp" />
     <ClCompile Include="LV2\타겟 넘버\Source.cpp" />
     <ClCompile Include="LV2\프린터\Source.cpp" />
     <ClCompile Include="LV2\피로도\Source.cpp" />
