--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -114,5 +114,14 @@
     <ClCompile Include="LV2\큰 수 만들기\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\메뉴 리뉴얼\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\수식 최대화\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\두 큐 합 같게 만들기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
