--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -132,5 +132,14 @@
     <ClCompile Include="LV2\롤케이크 자르기\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\124 나라의 숫자\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\숫자 변환하기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\택배상자\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
