--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LV2\124 나라의 숫자\Source.cpp" />
     <ClCompile Include="LV2\2 X n 타일링\Source.cpp" />
     <ClCompile Include="LV2\H-Index\Source.cpp" />
     <ClCompile Include="LV2\N개의 최소공배수\Source.cpp" />
@@ -145,6 +146,7 @@
     <ClCompile Include="LV2\삼각 달팽이\Source.cpp" />
     <ClCompile Include="LV2\소수 찾기\Source.cpp" />
     <ClCompile Include="LV2\수식 최대화\Source.cpp" />
+    <ClCompile Include="LV2\숫자 변환하기\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
     <ClCompile Include="LV2\스킬트리\Source.cpp" />
     <ClCompile Include="LV2\압축\Source.cpp" />
@@ -161,6 +163,7 @@
     <ClCompile Include="LV2\카펫\Source.cpp" />
     <ClCompile Include="LV2\큰 수 만들기\Source.cpp" />
     <ClCompile Include="LV2\타겟 넘버\Source.cpp" />
+    <ClCompile Include="LV2\택배상자\Source.cpp" />
     <ClCompile Include="LV2\프린터\Source.cpp" />
     <ClCompile Include="LV2\피로도\Source.cpp" />
     <ClCompile Include="LV2\피보나치 수열\Source.cpp" />
