--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -141,5 +141,8 @@
     <ClCompile Include="LV2\택배상자\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\K진수에서 소수 개수 구하기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
