--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="LV2\124 나라의 숫자\Source.cpp" />
     <ClCompile Include="LV2\2 X n 타일링\Source.cpp" />
     <ClCompile Include="LV2\H-Index\Source.cpp" />
+    <ClCompile Include="LV2\K진수에서 소수 개수 구하기\Source.cpp" />
     <ClCompile Include="LV2\N개의 최소공배수\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 수\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 정사각형 찾기\Source.cpp" />
