--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -156,5 +156,14 @@
     <ClCompile Include="LV2\점 찍기\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\조이스틱\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\N-Queen\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\혼자 놀기의 달인\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
