--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -165,5 +165,11 @@
     <ClCompile Include="LV2\혼자 놀기의 달인\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\스티커 모으기(2)\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\거스름돈\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
