--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -171,5 +171,11 @@
     <ClCompile Include="LV3\거스름돈\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\[1차] 셔틀버스\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\여행경로\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
