--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -177,5 +177,11 @@
     <ClCompile Include="LV3\여행경로\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\섬 연결하기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\보석 쇼핑\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
