--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -183,5 +183,11 @@
     <ClCompile Include="LV3\보석 쇼핑\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\불량 사용자\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\숫자 게임\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
