--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -179,7 +179,9 @@
     <ClCompile Include="LV3\[1차] 셔틀버스\Source.cpp" />
     <ClCompile Include="LV3\거스름돈\Source.cpp" />
     <ClCompile Include="LV3\보석 쇼핑\Source.cpp" />
+    <ClCompile Include="LV3\불량 사용자\Source.cpp" />
     <ClCompile Include="LV3\섬 연결하기\Source.cpp" />
+    <ClCompile Include="LV3\숫자 게임\Source.cpp" />
     <ClCompile Include="LV3\스티커 모으기(2)\Source.cpp" />
     <ClCompile Include="LV3\여행경로\Source.cpp" />
     <ClCompile Include="Programmers.cpp" />
