--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -189,5 +189,11 @@
     <ClCompile Include="LV3\숫자 게임\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\단속카메라\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\등굣길\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
