--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -195,5 +195,11 @@
     <ClCompile Include="LV3\등굣길\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\예상 대진표\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\점프와 순간 이동\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
