--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -201,5 +201,11 @@
     <ClCompile Include="LV2\점프와 순간 이동\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\괄호 회전하기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\단어 변환\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
