--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -207,5 +207,14 @@
     <ClCompile Include="LV3\단어 변환\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\멀쩡한 사각형\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\뒤에 있는 큰 수 찾기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\마법의 엘리베이터\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
