--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -216,5 +216,11 @@
     <ClCompile Include="LV2\마법의 엘리베이터\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\배달\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\야근 지수\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
