--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -228,5 +228,11 @@
     <ClCompile Include="LV2\전화번호 목록\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\괄호 변환\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\네트워크\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
