--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -234,5 +234,11 @@
     <ClCompile Include="LV3\네트워크\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\숫자 블록\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\최고의 집합\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
