--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -240,5 +240,11 @@
     <ClCompile Include="LV3\최고의 집합\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\정수 삼각형\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV3\이중우선순위큐\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
