--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -246,5 +246,11 @@
     <ClCompile Include="LV3\이중우선순위큐\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\전력망을 둘로 나누기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\호텔 대실\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
