--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="LV2\K진수에서 소수 개수 구하기\Source.cpp" />
     <ClCompile Include="LV2\N-Queen\Source.cpp" />
     <ClCompile Include="LV2\N개의 최소공배수\Source.cpp" />
+    <ClCompile Include="LV2\[1차] 뉴스 클러스터링\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 수\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 정사각형 찾기\Source.cpp" />
     <ClCompile Include="LV2\괄호 변환\Source.cpp" />
