--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -252,5 +252,8 @@
     <ClCompile Include="LV2\호텔 대실\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\[1차] 뉴스 클러스터링\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
