--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="LV2\H-Index\Source.cpp" />
     <ClCompile Include="LV2\K진수에서 소수 개수 구하기\Source.cpp" />
     <ClCompile Include="LV2\N-Queen\Source.cpp" />
+    <ClCompile Include="LV2\n^배열 자르기\Source.cpp" />
     <ClCompile Include="LV2\N개의 최소공배수\Source.cpp" />
     <ClCompile Include="LV2\[1차] 뉴스 클러스터링\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 수\Source.cpp" />
@@ -161,6 +162,7 @@
     <ClCompile Include="LV2\숫자 블록\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
     <ClCompile Include="LV2\스킬트리\Source.cpp" />
+    <ClCompile Include="LV2\시소 짝꿍\Source.cpp" />
     <ClCompile Include="LV2\압축\Source.cpp" />
     <ClCompile Include="LV2\영어 끝말잇기\Source.cpp" />
     <ClCompile Include="LV2\예상 대진표\Source.cpp" />
