--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -255,5 +255,11 @@
     <ClCompile Include="LV2\[1차] 뉴스 클러스터링\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\n^배열 자르기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\시소 짝꿍\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
