--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -261,5 +261,14 @@
     <ClCompile Include="LV2\시소 짝꿍\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\최대값과 최솟값\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\올바른 괄호\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\최솟값 만들기\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
