--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="LV2\숫자 변환하기\Source.cpp" />
     <ClCompile Include="LV2\숫자 블록\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
+    <ClCompile Include="LV2\숫자의 표현\Source2.cpp" />
     <ClCompile Include="LV2\스킬트리\Source.cpp" />
     <ClCompile Include="LV2\시소 짝꿍\Source.cpp" />
     <ClCompile Include="LV2\압축\Source.cpp" />
@@ -171,6 +172,7 @@
     <ClCompile Include="LV2\올바른 괄호\Source2.cpp" />
     <ClCompile Include="LV2\위장\Source.cpp" />
     <ClCompile Include="LV2\이진 변환 반복하기\Source.cpp" />
+    <ClCompile Include="LV2\이진 변환 반복하기\Source2.cpp" />
     <ClCompile Include="LV2\전력망을 둘로 나누기\Source.cpp" />
     <ClCompile Include="LV2\전화번호 목록\Source.cpp" />
     <ClCompile Include="LV2\점 찍기\Source.cpp" />
