--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -270,5 +270,11 @@
     <ClCompile Include="LV2\최솟값 만들기\Source2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\이진 변환 반복하기\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LV2\숫자의 표현\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
