--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="LV2\괄호 변환\Source.cpp" />
     <ClCompile Include="LV2\괄호 회전하기\Source.cpp" />
     <ClCompile Include="LV2\구명보트\Source.cpp" />
+    <ClCompile Include="LV2\구명보트\Source2.cpp" />
     <ClCompile Include="LV2\귤 고르기\Source.cpp" />
     <ClCompile Include="LV2\기능개발\Source.cpp" />
     <ClCompile Include="LV2\다리를 지나는 트럭\Source.cpp" />
