--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -279,5 +279,8 @@
     <ClCompile Include="LV2\피보나치 수열\Source2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\구명보트\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
