--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -282,5 +282,8 @@
     <ClCompile Include="LV2\구명보트\Source2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\모음 사전\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
