--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -285,5 +285,8 @@
     <ClCompile Include="LV2\모음 사전\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\무인도 여행\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
