--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="LV2\[1차] 뉴스 클러스터링\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 수\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 정사각형 찾기\Source.cpp" />
+    <ClCompile Include="LV2\과제 진행하기\Source.cpp" />
     <ClCompile Include="LV2\괄호 변환\Source.cpp" />
     <ClCompile Include="LV2\괄호 회전하기\Source.cpp" />
     <ClCompile Include="LV2\구명보트\Source.cpp" />
