--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -294,5 +294,8 @@
     <ClCompile Include="LV2\미로 탈출\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\과제 진행하기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
