--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -297,5 +297,8 @@
     <ClCompile Include="LV2\과제 진행하기\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\우박수열 정적분\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
