--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -300,5 +300,8 @@
     <ClCompile Include="LV2\우박수열 정적분\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\두 원 사이의 정수 쌍\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
