--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -303,5 +303,8 @@
     <ClCompile Include="LV2\두 원 사이의 정수 쌍\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\혼자서 하는 틱택토\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
