--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="LV2\수식 최대화\Source.cpp" />
     <ClCompile Include="LV2\숫자 변환하기\Source.cpp" />
     <ClCompile Include="LV2\숫자 블록\Source.cpp" />
+    <ClCompile Include="LV2\숫자 카드 나누기\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source.cpp" />
     <ClCompile Include="LV2\숫자의 표현\Source2.cpp" />
     <ClCompile Include="LV2\스킬트리\Source.cpp" />
