--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -309,5 +309,8 @@
     <ClCompile Include="LV2\숫자 카드 나누기\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\교점에 별 만들기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
