--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -209,6 +209,7 @@
     <ClCompile Include="LV2\호텔 대실\Source.cpp" />
     <ClCompile Include="LV2\혼자 놀기의 달인\Source.cpp" />
     <ClCompile Include="LV2\혼자서 하는 틱택토\Source.cpp" />
+    <ClCompile Include="LV2\후보키\Source.cpp" />
     <ClCompile Include="LV3\[1차] 셔틀버스\Source.cpp" />
     <ClCompile Include="LV3\거스름돈\Source.cpp" />
     <ClCompile Include="LV3\네트워크\Source.cpp" />
