--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -315,5 +315,8 @@
     <ClCompile Include="LV2\후보키\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\요격 시스템\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
