--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -318,5 +318,8 @@
     <ClCompile Include="LV2\요격 시스템\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\쿼드압축 후 개수 세기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
