--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -214,6 +214,7 @@
     <ClCompile Include="LV2\혼자서 하는 틱택토\Source.cpp" />
     <ClCompile Include="LV2\후보키\Source.cpp" />
     <ClCompile Include="LV3\[1차] 셔틀버스\Source.cpp" />
+    <ClCompile Include="LV3\가장 먼 노드\Source.cpp" />
     <ClCompile Include="LV3\거스름돈\Source.cpp" />
     <ClCompile Include="LV3\네트워크\Source.cpp" />
     <ClCompile Include="LV3\단속카메라\Source.cpp" />
