--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -327,5 +327,8 @@
     <ClCompile Include="LV3\가장 먼 노드\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\가장 먼 노드\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
