--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="LV2\n^배열 자르기\Source.cpp" />
     <ClCompile Include="LV2\N개의 최소공배수\Source.cpp" />
     <ClCompile Include="LV2\[1차] 뉴스 클러스터링\Source.cpp" />
+    <ClCompile Include="LV2\[3차]파일명 정렬\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 수\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 정사각형 찾기\Source.cpp" />
     <ClCompile Include="LV2\과제 진행하기\Source.cpp" />
