--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -336,5 +336,8 @@
     <ClCompile Include="LV3\기지국 설치\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\[3차]파일명 정렬\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
