--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="LV2\주식가격\Source.cpp" />
     <ClCompile Include="LV2\주차 요금 계산\Source.cpp" />
     <ClCompile Include="LV2\줄 서는 방법\Source.cpp" />
+    <ClCompile Include="LV2\징검다리 건너기\Source.cpp" />
     <ClCompile Include="LV2\짝지어 제거하기\Source.cpp" />
     <ClCompile Include="LV2\최대값과 최솟값\Source.cpp" />
     <ClCompile Include="LV2\최대값과 최솟값\Source2.cpp" />
