--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -339,5 +339,8 @@
     <ClCompile Include="LV2\[3차]파일명 정렬\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\징검다리 건너기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
