--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="LV2\피보나치 수열\Source.cpp" />
     <ClCompile Include="LV2\피보나치 수열\Source2.cpp" />
     <ClCompile Include="LV2\하노이의 탑\Source.cpp" />
+    <ClCompile Include="LV2\행렬 테두리 회전하기\Source.cpp" />
     <ClCompile Include="LV2\행렬의 곱셈\Source.cpp" />
     <ClCompile Include="LV2\호텔 대실\Source.cpp" />
     <ClCompile Include="LV2\혼자 놀기의 달인\Source.cpp" />
