--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -351,5 +351,8 @@
     <ClCompile Include="LV2\튜플\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\튜플\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
