--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -357,5 +357,8 @@
     <ClCompile Include="LV3\베스트 앨범\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HackerRank\Medium\Inherited code\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
