--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -363,5 +363,8 @@
     <ClCompile Include="HackerRank\Medium\Exceptional server\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HackerRank\Medium\Virtual functions\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
