--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -127,8 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HackerRank\Medium\Climbing the leaderboard\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Exceptional server\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Inherited code\Source.cpp" />
+    <ClCompile Include="HackerRank\Medium\Queen%27s attack II\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Virtual functions\Source.cpp" />
     <ClCompile Include="LV2\124 나라의 숫자\Source.cpp" />
     <ClCompile Include="LV2\2 X n 타일링\Source.cpp" />
