--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -372,5 +372,11 @@
     <ClCompile Include="HackerRank\Medium\Queen%27s attack II\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HackerRank\Medium\Forming a Magic Square\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="HackerRank\Medium\The Bomberman game\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
