--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="HackerRank\Medium\Larry%27s Array\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Queen%27s attack II\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\The Bomberman game\Source.cpp" />
+    <ClCompile Include="HackerRank\Medium\The Grid Search\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Virtual functions\Source.cpp" />
     <ClCompile Include="LV2\124 나라의 숫자\Source.cpp" />
     <ClCompile Include="LV2\2 X n 타일링\Source.cpp" />
