--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -381,5 +381,8 @@
     <ClCompile Include="HackerRank\Medium\Larry%27s Array\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HackerRank\Medium\The Grid Search\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
