--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HackerRank\Medium\3D Surface Area\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Climbing the leaderboard\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Exceptional server\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Forming a Magic Square\Source.cpp" />
