--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="HackerRank\Medium\Forming a Magic Square\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Inherited code\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Larry%27s Array\Source.cpp" />
+    <ClCompile Include="HackerRank\Medium\Lily%27s Homework\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Queen%27s attack II\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\The Bomberman game\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\The Grid Search\Source.cpp" />
