--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -390,5 +390,8 @@
     <ClCompile Include="HackerRank\Medium\Common Child\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HackerRank\Medium\Lily%27s Homework\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
