--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="HackerRank\Medium\Common Child\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Encryption\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Exceptional server\Source.cpp" />
+    <ClCompile Include="HackerRank\Medium\Extra Long Factorials\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Forming a Magic Square\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Inherited code\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Larry%27s Array\Source.cpp" />
