--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -399,5 +399,8 @@
     <ClCompile Include="HackerRank\Medium\Extra Long Factorials\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HackerRank\Medium\Bigger is Greater\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
