--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -405,5 +405,8 @@
     <ClCompile Include="HackerRank\Medium\Highest Value Palindrome\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HackerRank\Medium\Almost Sorted\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
