--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="HackerRank\Medium\Queen%27s attack II\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\The Bomberman game\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\The Grid Search\Source.cpp" />
+    <ClCompile Include="HackerRank\Medium\The Time In Words\Source.cpp" />
     <ClCompile Include="HackerRank\Medium\Virtual functions\Source.cpp" />
     <ClCompile Include="LV2\124 나라의 숫자\Source.cpp" />
     <ClCompile Include="LV2\2 X n 타일링\Source.cpp" />
