--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="LV2\[3차]파일명 정렬\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 수\Source.cpp" />
     <ClCompile Include="LV2\가장 큰 정사각형 찾기\Source.cpp" />
+    <ClCompile Include="LV2\거리두기 확인하기\Source.cpp" />
     <ClCompile Include="LV2\과제 진행하기\Source.cpp" />
     <ClCompile Include="LV2\괄호 변환\Source.cpp" />
     <ClCompile Include="LV2\괄호 회전하기\Source.cpp" />
