--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -411,5 +411,8 @@
     <ClCompile Include="HackerRank\Medium\The Time In Words\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\거리두기 확인하기\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
