--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -224,6 +224,7 @@
     <ClCompile Include="LV2\큰 수 만들기\Source.cpp" />
     <ClCompile Include="LV2\타겟 넘버\Source.cpp" />
     <ClCompile Include="LV2\택배상자\Source.cpp" />
+    <ClCompile Include="LV2\테이블 해시 함수\Source.cpp" />
     <ClCompile Include="LV2\튜플\Source.cpp" />
     <ClCompile Include="LV2\튜플\Source2.cpp" />
     <ClCompile Include="LV2\프린터\Source.cpp" />
