--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -417,5 +417,8 @@
     <ClCompile Include="LV2\테이블 해시 함수\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\가장 긴 팰린드롬\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
