--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -420,5 +420,8 @@
     <ClCompile Include="LV3\가장 긴 팰린드롬\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\합승 택시 요금\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
