--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -423,5 +423,8 @@
     <ClCompile Include="LV3\합승 택시 요금\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\합승 택시 요금\Source2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
