--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -429,5 +429,8 @@
     <ClCompile Include="LV2\디펜스 게임\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\이모티콘 행사\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
