--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -432,5 +432,8 @@
     <ClCompile Include="LV2\이모티콘 행사\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\3 X n 타일링\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
