--- a/Programmers.vcxproj
+++ b/Programmers.vcxproj
@@ -260,6 +260,7 @@
     <ClCompile Include="LV3\스티커 모으기(2)\Source.cpp" />
     <ClCompile Include="LV3\야근 지수\Source.cpp" />
     <ClCompile Include="LV3\여행경로\Source.cpp" />
+    <ClCompile Include="LV3\연속 펄스 부분 수열의 합\Source.cpp" />
     <ClCompile Include="LV3\이중우선순위큐\Source.cpp" />
     <ClCompile Include="LV3\입국심사\Source.cpp" />
     <ClCompile Include="LV3\정수 삼각형\Source.cpp" />
