--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -435,5 +435,8 @@
     <ClCompile Include="LV2\3 X n 타일링\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV3\연속 펄스 부분 수열의 합\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
