--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -444,5 +444,8 @@
     <ClCompile Include="LV2\[1차] 프렌즈4블록\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\[3차] 방금그곡\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
