--- a/Programmers.vcxproj.filters
+++ b/Programmers.vcxproj.filters
@@ -447,5 +447,8 @@
     <ClCompile Include="LV2\[3차] 방금그곡\Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LV2\빛의 경로 사이클\Source.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
